--- a/Examenes/Examen3/css/style.css
+++ b/Examenes/Examen3/css/style.css
@@ -16,3 +16,33 @@ td button{
   display: flex;
   justify-content: center;
 }
+
+
+/*. */
+.menu
+{
+background-color: #00547E;
+border-bottom: 4px solid #04A3ED;
+width:100%;
+height: auto;
+padding: 0 10px 0 50px;
+/*position: fixed;*/
+margin: 0px;
+z-index: 1;
+opacity: 0.9;
+}
+
+
+.navbar-header > h1
+{
+font-family: 'Ubuntu Condensed', sans-serif;
+padding: 0px;
+margin: 0px;
+text-decoration: none;
+color: white;
+font-size: 25px;
+padding: 5px 30px;
+text-align: center;
+}
+
+
