--- a/Examenes/Proyecto/css/style.css
+++ b/Examenes/Proyecto/css/style.css
@@ -2,6 +2,20 @@
 
 @import "bourbon"; */
 
+.contenedorLoading{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #000;
+	z-index: 999;
+	opacity: 0.5;
+	pointer-events: none;
+}
+
+
+
 body {
 	background: #eee !important;	
 }
